--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:#000;">
-<h1 style="padding:30px 0 0 30px;">Haha!</h1>
+<h1 style="padding:30px 0 0 30px; color:#fff;">Haha!</h1>
 </body>
 </html>
