--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<html>
-<body style="background-color:#000;">
-<h1 style="margin:30px 0 0 30px; color:#fff;">Haha!</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/.css/index.css">
+</head>
+<body>
+    <h1 class="test">Haha!</h1>
 </body>
 </html>
