--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="/.css/index.css">
 </head>
 <body>
-    <h1 class="test">Haha!</h1>
+    <h1 class="test">사이트 오픈 준비중입니다.<br>많관부.</h1>
 </body>
 </html>
