--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/.css/index.css">
+    <link rel="stylesheet" href="./.css/index.css">
 </head>
 <body>
-    <h1 class="test">사이트 오픈 준비중입니다.<br>많관부.</h1>
+    <div class="test">
+        <h1>사이트 오픈 준비중입니다.<br>많관부.</h1>
+    </div>
 </body>
 </html>
