--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./.css/index.css">
+    <link rel="stylesheet" href="./.css/pretendardvariable.css">
 </head>
-<body>
+<body style="background-color: #333;">
     <div class="test">
         <h1>사이트 오픈 준비중입니다.<br>많관부.</h1>
     </div>
