--- a/index.html
+++ b/index.html
@@ -19,48 +19,123 @@
   <section class="container grid">
      <div>
       <article>
-        <header>About</header>
+        <header>&#x1f636;&#x200d;&#x1f32b;&#xfe0f;&nbsp;About</header>
         Hello traveler! I'm Kade, a human.<br>Nothing to see here but, there will be something to see in my other sites!
       </article>
     </div>
     <div>
       <article>
-        <h3>Places where I usually am</h3>
+        <header>&#x1f30f;&nbsp;Social</header>
         <ul>
           <li>
-            <a href="https://twitter.com/kadefringe" target="_blank" rel="noopener noreferrer" class="link color-twitter"> <!-- Twitter BI color: #1da1f2 --> 
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
-                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
-              </svg>&nbsp;Twitter
+            <a href="https://twitter.com/kadefringe" target="_blank" rel="noopener noreferrer"> <!-- Twitter BI color: #1da1f2 --> 
+              <span class="link color-twitter">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                  <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
+                </svg>&nbsp;Twitter
+              </span>
+              <small>@kadefringe</small>
             </a>
-            <small>@kadefringe</small>
           </li>
           <li>
-            <a href="https://bsky.app/profile/kade.jp" target="_blank" rel="noopener noreferrer" class="link color-bsky"> <!-- Bluesky BI color: #1185fe -->
-              <svg width="1em" height="1em" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 530">
-                <path d="m135.72 44.03c66.496 49.921 138.02 151.14 164.28 205.46 26.262-54.316 97.782-155.54 164.28-205.46 47.98-36.021 125.72-63.892 125.72 24.795 0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.3797-3.6904-10.832-3.7077-7.8964-0.0174-2.9357-1.1937 0.51669-3.7077 7.8964-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.4491-163.25-81.433-5.9562-21.282-16.111-152.36-16.111-170.07 0-88.687 77.742-60.816 125.72-24.795z" fill="currentColor"/>
-              </svg>&nbsp;Bluesky
+            <a href="https://bsky.app/profile/kade.jp" target="_blank" rel="noopener noreferrer"> <!-- Bluesky BI color: #1185fe -->
+              <span class="link color-bsky">
+                <svg width="1em" height="1em" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 530">
+                  <path d="m135.72 44.03c66.496 49.921 138.02 151.14 164.28 205.46 26.262-54.316 97.782-155.54 164.28-205.46 47.98-36.021 125.72-63.892 125.72 24.795 0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.3797-3.6904-10.832-3.7077-7.8964-0.0174-2.9357-1.1937 0.51669-3.7077 7.8964-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.4491-163.25-81.433-5.9562-21.282-16.111-152.36-16.111-170.07 0-88.687 77.742-60.816 125.72-24.795z" fill="currentColor"/>
+                </svg>&nbsp;Bluesky
+              </span>
+              <small>kade.jp</small>
             </a>
-            <small>kade.jp</small>
           </li>
           <li>
-            <a href="https://f.kade.jp/@kade" target="_blank" rel="noopener noreferrer" class="link color-mstdn"> <!-- kade.jp mastodon color: #08a6b7 -->
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-mastodon" viewBox="0 0 16 16">
-                <path d="M11.19 12.195c2.016-.24 3.77-1.475 3.99-2.603.348-1.778.32-4.339.32-4.339 0-3.47-2.286-4.488-2.286-4.488C12.062.238 10.083.017 8.027 0h-.05C5.92.017 3.942.238 2.79.765c0 0-2.285 1.017-2.285 4.488l-.002.662c-.004.64-.007 1.35.011 2.091.083 3.394.626 6.74 3.78 7.57 1.454.383 2.703.463 3.709.408 1.823-.1 2.847-.647 2.847-.647l-.06-1.317s-1.303.41-2.767.36c-1.45-.05-2.98-.156-3.215-1.928a4 4 0 0 1-.033-.496s1.424.346 3.228.428c1.103.05 2.137-.064 3.188-.189zm1.613-2.47H11.13v-4.08c0-.859-.364-1.295-1.091-1.295-.804 0-1.207.517-1.207 1.541v2.233H7.168V5.89c0-1.024-.403-1.541-1.207-1.541-.727 0-1.091.436-1.091 1.296v4.079H3.197V5.522q0-1.288.66-2.046c.456-.505 1.052-.764 1.793-.764.856 0 1.504.328 1.933.983L8 4.39l.417-.695c.429-.655 1.077-.983 1.934-.983.74 0 1.336.259 1.791.764q.662.757.661 2.046z"/>
-              </svg>&nbsp;Mastodon
+            <a href="https://f.kade.jp/@kade" target="_blank" rel="noopener noreferrer"> <!-- kade.jp mastodon color: #08a6b7 -->
+              <span class="link color-mstdn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-mastodon" viewBox="0 0 16 16">
+                  <path d="M11.19 12.195c2.016-.24 3.77-1.475 3.99-2.603.348-1.778.32-4.339.32-4.339 0-3.47-2.286-4.488-2.286-4.488C12.062.238 10.083.017 8.027 0h-.05C5.92.017 3.942.238 2.79.765c0 0-2.285 1.017-2.285 4.488l-.002.662c-.004.64-.007 1.35.011 2.091.083 3.394.626 6.74 3.78 7.57 1.454.383 2.703.463 3.709.408 1.823-.1 2.847-.647 2.847-.647l-.06-1.317s-1.303.41-2.767.36c-1.45-.05-2.98-.156-3.215-1.928a4 4 0 0 1-.033-.496s1.424.346 3.228.428c1.103.05 2.137-.064 3.188-.189zm1.613-2.47H11.13v-4.08c0-.859-.364-1.295-1.091-1.295-.804 0-1.207.517-1.207 1.541v2.233H7.168V5.89c0-1.024-.403-1.541-1.207-1.541-.727 0-1.091.436-1.091 1.296v4.079H3.197V5.522q0-1.288.66-2.046c.456-.505 1.052-.764 1.793-.764.856 0 1.504.328 1.933.983L8 4.39l.417-.695c.429-.655 1.077-.983 1.934-.983.74 0 1.336.259 1.791.764q.662.757.661 2.046z"/>
+                </svg>&nbsp;Mastodon
+              </span>
+              <small>@kade@f.kade.jp</small>
             </a>
-            <small>@kade@f.kade.jp</small>
           </li>
           <li>
-            <a href="https://github.com/kadefringe" target="_blank" rel="noopener noreferrer" class="link color-github">
-              <svg width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 96"><path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"/></svg>
-              GitHub
+            <a href="https://github.com/kadefringe" target="_blank" rel="noopener noreferrer">
+              <span class="link color-github">
+                <svg width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 96">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"/>
+                </svg>&nbsp;GitHub
+              </span>
+              <small>kadefringe</small>
             </a>
-            <small>kadefringe</small>
+          </li>
+          <li>
+            <a href="https://kade.hatenablog.jp" target="_blank" rel="noopener noreferrer">
+              <span class="link color-hatena">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="50 50 200 200">
+                  <path d="M149.999 248.909c-54.537 0-98.906-44.367-98.906-98.909 0-54.537 44.369-98.909 98.906-98.909 54.545 0 98.908 44.372 98.908 98.909 0 54.542-44.363 98.909-98.908 98.909zm0-185.238c-47.601 0-86.33 38.723-86.33 86.329 0 47.605 38.729 86.332 86.33 86.332 47.61 0 86.338-38.727 86.338-86.332 0-47.606-38.728-86.329-86.338-86.329zM161.52 101.16c-4.832-9.785-7.783-19.3-9.273-24.845v70.055c2.447.917 4.197 3.257 4.197 6.021 0 3.559-2.887 6.442-6.443 6.442-3.56 0-6.443-2.885-6.443-6.442 0-2.896 1.925-5.317 4.558-6.131v-70.019c-1.485 5.531-4.438 15.092-9.293 24.919-7.571 15.314-17.009 28.823-17.009 28.823l6.036 82.598s5.736 6.401 22.31 6.41h.023c16.573-.009 22.312-6.41 22.312-6.41l6.035-82.598c-.003 0-9.441-13.508-17.01-28.823z"/>
+                </svg>&nbsp;Hatena Blog
+              </span>
+              <small>kade.hatenablog.jp</small>
+            </a>
           </li>
         </ul>
       </article>
     </div>
+  </section>
+  <section class="container grid">
+    <div>
+      <article>
+        <header>&#x1f5a5;&nbsp;Dev</header>
+        <ul>
+          <li>
+            <a href="https://dev.kade.jp" target="_blank" rel="noopener noreferrer">
+              <span class="link color-chihaya">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-terminal-fill" viewBox="0 0 16 16">
+                  <path d="M6 9a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3A.5.5 0 0 1 6 9M3.854 4.146a.5.5 0 1 0-.708.708L4.793 6.5 3.146 8.146a.5.5 0 1 0 .708.708l2-2a.5.5 0 0 0 0-.708z"/>
+                  <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"/>
+                </svg>
+              Blog
+              </span>
+              <small>dev.kade.jp</small>
+            </a>
+          </li>
+          <li>
+            <a href="https://portfolio-jsp.kade.jp" target="_blank" rel="noopener noreferrer">
+              <span class="link color-oracle">
+                <!-- Java logo credit: SVG Repo, https://www.svgrepo.com/svg/75601/java-logo -->
+                <svg height="1em" width="1em" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 502.632 502.632" xml:space="preserve">
+                  <path d="M240.864,269.894c0,0-28.02-53.992-26.985-93.445c0.755-28.193,64.324-56.062,89.281-96.529
+                          C328.074,39.431,300.054,0,300.054,0s6.234,29.077-10.376,59.147c-16.609,30.113-77.914,47.779-101.749,99.679
+                          S240.864,269.894,240.864,269.894z"/>
+                  <path d="M345.741,105.869c0,0-95.494,36.347-95.494,77.849c0,41.545,25.928,55.027,30.113,68.509
+                          c4.142,13.525-7.269,36.347-7.269,36.347s37.361-25.95,31.105-56.062c-6.234-30.113-35.29-39.475-18.659-69.544
+                          C296.646,142.799,345.741,105.869,345.741,105.869z"/>
+                  <path d="M230.51,324.748c88.246-3.149,120.43-30.997,120.43-30.997
+                          c-57.076,15.553-208.654,14.539-209.711,3.128c-1.014-11.411,46.701-20.773,46.701-20.773s-74.721,0-80.955,18.68
+                          C100.74,313.467,142.328,327.833,230.51,324.748z"/>
+                  <path d="M358.187,368.494c0,0,86.369-18.421,77.827-65.338c-10.354-57.119-70.58-24.936-70.58-24.936
+                          s42.602,0,46.722,25.928C416.32,330.098,358.187,368.494,358.187,368.494z"/>
+                  <path d="M315.628,343.601c0,0-21.765,5.716-54.013,9.34c-43.228,4.853-95.494,1.014-99.657-6.256
+                          c-4.098-7.269,7.269-11.411,7.269-11.411c-51.921,12.468-23.512,34.233,37.339,38.418c52.158,3.559,129.791-15.574,129.791-15.574
+                          L315.628,343.601z"/>
+                  <path d="M181.738,388.943c0,0-23.555,0.669-24.936,13.137c-1.359,12.382,14.496,23.512,72.65,26.964
+                          c58.133,3.451,98.988-15.898,98.988-15.898l-26.295-15.962c0,0-16.631,3.494-42.236,6.946
+                          c-25.626,3.473-78.173-2.783-80.243-7.593C177.553,391.682,181.738,388.943,181.738,388.943z"/>
+                  <path d="M407.994,445.005c8.995-9.707-2.783-17.321-2.783-17.321s4.142,4.853-1.337,10.376
+                          c-5.544,5.522-56.084,19.349-137.061,23.512c-80.955,4.163-168.856-7.615-171.639-17.99
+                          c-2.696-10.376,45.018-18.659,45.018-18.659c-5.522,0.69-71.96,2.071-74.074,20.082c-2.071,17.968,29.056,32.507,153.67,32.507
+                          C344.339,477.491,399.042,454.647,407.994,445.005z"/>
+                  <path d="M359.568,485.817c-54.682,11.044-220.734,4.077-220.734,4.077s107.919,25.626,231.109,4.185
+                          c58.888-10.268,62.318-38.763,62.318-38.763S414.25,474.708,359.568,485.817z"/>
+                </svg>
+              JSP portfolio
+              </span>
+              <small>portfolio-jsp.kade.jp</small>
+            </a>
+          </li>
+        </ul>
+      </article>
+    </div>
+    <div></div>
   </section>
 </body>
 
